// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders with correct account 1`] = `
<div>
  Current account is: 
  0xdf3f619804a92fdb4057192dc43dd748ea778adc
</div>
`;

exports[`Renders with empty account 1`] = `
<div>
  Current ETH account is unavailable.
</div>
`;
